--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ language: ruby
 script: "rake"
 
 rvm:
-  - 1.9.1
+  - 1.8.7
   - 1.9.2
   - 1.9.3
+  - jruby-18mode
+  - jruby-19mode
+  - rbx-18mode
+  - rbx-19mode
+  - ree
 
 notifications:
   email:
