ST: Added env namespace when loading the config

--- a/spec/fixtures/yell.yml
+++ b/spec/fixtures/yell.yml
@@ -1,7 +1,9 @@
-:level: info
+development:
+  :level: info
 
-:adapters:
-  - :stdout:
-      :level: "lt.error"
-  - :stderr:
-      :level: "gte.error"
+  :adapters:
+    - :stdout:
+        :level: "lt.error"
+    - :stderr:
+        :level: "gte.error"
+
