ST: Updated configuration spec

--- a/spec/fixtures/yell.yml
+++ b/spec/fixtures/yell.yml
@@ -2,8 +2,6 @@ development:
   :level: info
 
   :adapters:
-    - :stdout:
-        :level: "lt.error"
+    - :stdout
     - :stderr:
         :level: "gte.error"
-
