--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ language: ruby
 script: "rspec"
 
 rvm:
-  - 1.8.7
-  - 1.9.2
-  - 1.9.3
+  - ruby-1.8.7
+  - ruby-1.9.2
+  - ruby-1.9.3
+  - ruby-head
   - jruby-18mode
   - jruby-19mode
   - rbx-18mode
