--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
-  - jruby-18mode
-  - jruby-19mode
-  - rbx-18mode
-  - rbx-19mode
+  - 2.1.0
+  - jruby
+  - rbx
   - ree
 
 notifications:
