CHORE: Updated Gemfile and .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: ruby
 
-script: "rspec"
+script: "rake"
 
 rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
-  - 2.1.0
-  - jruby
-  - rbx
+  - 2.1.1
+  - jruby-18mode
+  - jruby-19mode
+  - rbx-2
   - ree
 
 notifications:
   email:
     - me@rudionrails.com
+
