--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,24 @@
-sudo: false
 language: ruby
 
-script: "rspec"
+script: "bundle exec rspec"
 
-rvm:
-  - ruby-head
-  - 2.3.1
-  - 2.2.5
-  - 2.1.10
-  - 2.0.0
+matrix:
+  include:
+    - rvm: ruby-head
+    - rvm: 2.3.1
+    - rvm: 2.2.5
 
-  - jruby-9.1.5.0
-  - jruby-9.0.5.0
-  - jruby-1.7.26
+    - rvm: 2.2.2
+      gemfile: Gemfile.lte-2.2.2
+    - rvm: 2.1.0
+      gemfile: Gemfile.lte-2.2.2
+    - rvm :2.0.0
+      gemfile: Gemfile.lte-2.2.2
 
-  - rubinius-3.9
-  - rubinius-2.9
+    - rvm: jruby-head
+    - rvm: jruby-9.1.0.0
+    - rvm: jruby-9.0.0.0
+      gemfile: Gemfile.lte-2.2.2
 
 notifications:
   on_success: change
