--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ matrix:
     - rvm: 2.5
     - rvm: 2.4
     - rvm: 2.3
+    - rvm: jruby-9.1
+    - rvm: jruby-9.2
   allow_failures:
-    # ruby-head is always finicky with bundler and such
     - rvm: ruby-head
+    - rvm: jruby-head
 
 notifications:
   on_success: change
