Enable bundler caching for travis (#62)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 before_install: gem install bundler
 script: "bundle exec rspec"
 
+cache: bundler
+
 matrix:
   include:
     - rvm: ruby-head
